# Automated-Trading-Bot-Robinhood

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
automated-trading-bot/: login_credentials.py  main.py  package-lock.json  package.json  tsconfig.json
automated-trading-bot/src/api/: urls.py  views.py
automated-trading-bot/src/app/: page.tsx
automatedTradingBotRobinhood/: manage.py
automatedTradingBotRobinhood/api/: models.py  serializers.py  urls.py  views.py
automatedTradingBotRobinhood/automatedTradingBotRobinhood/: asgi.py  settings.py  urls.py  wsgi.py
automatedTradingBotRobinhood/src/bots/: rolling_avg_trend_bot.py
backend/: .gitignore  Dockerfile  db.sqlite3  requirements.txt
backend/api/: models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/ml_model/bots/: rolling_avg_trend_bot.py  trade_bot.py
backend/ml_model/models/: base_model.py  rolling_avg_trend_model.py
backend/ml_model/utilities/: login.py  order_types.py
backend/tradingbot/: models.py  serializers.py  urls.py  views.py
backend/tradingbot/migrations/: 0001_initial.py  0002_rename_user_trader.py  0003_alter_trader_id.py
frontend/: .gitignore  Dockerfile  Jenkinsfile  package-lock.json  package.json
frontend/src/app/: layout.tsx
src/app/: page.tsx
src/automatedTradingBotRobinhood/: __init__.py
src/automatedTradingBotRobinhood/bots/: automated_trading_bot.py
src/automatedTradingBotRobinhood/models/: random_forest_classifier_model.py
tests/: test_random_forest_classifier.py
(+20 files in other folders)
