[project]
name = "automated-trading-bot-robinhood"
version = "0.0.1"
authors = [
  { name="Ethan Sepa", email="ethanmsepa@gmail.com" },
]
description = "An automated trading bot package for Robinhood"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ethansepa/automated-trading-bot-robinhood"
Issues = "https://github.com/ethansepa/automated-trading-bot-robinhood/issues"